Deployment/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: api-workshop
    app.openshift.io/runtime-version: v1
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    app: frontend
    deployment: frontend
