Deployment/frontend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: api-workshop
    app.openshift.io/runtime-version: v1
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
